# ROS

kinova/apriltags/: CMakeLists.txt
kinova/apriltags/include/: apriltags.h
kinova/apriltags/launch/: apriltags.launch
kinova/apriltags/src/: apriltags.cpp
kinova/iai_kinect2/kinect2_registration/: CMakeLists.txt
kinova/iai_kinect2/kinect2_viewer/: kinect2_viewer.kdev4
kinova/itia_hindsight_assistance_policy/: CMakeLists.txt  README.md  hindsight_assistance_policy.kdev4  package.xml
kinova/itia_hindsight_assistance_policy/launch/: pompds.launch
kinova/itia_hindsight_assistance_policy/src/: robotpathgeneration.cpp
kinova/itia_hindsight_assistance_policy/src/AssistancePolicy/: AssistanceGoal.h  AssistancePolicyBase.cpp  AssistancePolicyBase.h  DoNothingPolicy.h  DoNothingPrediction.h  GoalPolicy.h  GoalPredictionBase.h  HuberInstance.cpp  HuberInstance.h  HuberRotationInstance.cpp  HuberRotationInstance.h  PolicyInstanceBase.h  UtilFunctions.cpp  UtilFunctions.h
kinova/itia_hindsight_assistance_policy/src/RosSupport/: rosmanager.cpp  rosmanager.h
kinova/itia_human_prediction/: CMakeLists.txt  README.md  package.xml  setup.py
kinova/itia_human_prediction/launch/: humpred.launch
kinova/itia_human_prediction/msg/: PoseArrays.msg
kinova/itia_human_prediction/src/hrc/: assistance.py  humpred.py
kinova/itia_kinova/: CMakeLists.txt  README.md  itia_kinova.kdev4  package.xml
kinova/itia_kinova/config/: Precd_const_list.yaml  default_controllers.yaml  hand_base_trajectory.yaml  kinova_grasp_data.yaml  planning_scene_config.yaml  planning_scene_objects_info.yaml  stomp_config.yaml  test_trajectory.yaml
kinova/itia_kinova/include/itia_kinova/: itia_grasp_utils.h  itia_kinova_utils.h  itia_moveit_utils.h  support.h
kinova/itia_kinova/launch/: calculate_length.launch  grasp.launch  human_motion_tracking.launch  kinova_j2n6s300.launch  move.launch  object_tracking.launch  pomdp.launch  pomdp_publishers.launch  pomdp_stop.launch  pomdp_tsr.launch  pomdp_tsr_with_constraint.launch  precedence_const.launch  tf_to_hand.launch  trial.launch  voice.launch
kinova/itia_kinova/src/: calculate_length.cpp  grasp.cpp  hand_dis.cpp  kinect_calibration_publisher.cpp  move.cpp  move_like_pomdp.cpp  object_tracking.cpp  pomdp.cpp  pomdp_publishers.cpp  pomdp_stop.cpp  pomdp_tsr.cpp  pomdp_tsr_with_constraint.cpp  precedence_const.cpp  tf_to_hand.cpp  trial.cpp  voice.cpp
kinova/itia_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml
kinova/itia_msgs/action/: interaction_task.action  string.action
kinova/itia_msgs/include/itia_msgs/: motion_conversions.h  motion_utils.h
kinova/itia_msgs/msg/: Float64Stamped.msg  JointInfo.msg  MotionRequest.msg  MotionStamped.msg  RobotLimit.msg
kinova/itia_msgs/srv/: get_config.srv  send_bool.srv  send_string.srv  set_config.srv
kinova/itia_occupancy_volume/: CMakeLists.txt  package.xml
kinova/itia_occupancy_volume/src/: itia_occupancy_volume_create_node.cpp  itia_occupancy_volume_query_node.cpp
kinova/itia_occupancy_volume/src/itia_occupancy_volume/: input_utils.cpp  occupancy_grid.cpp  occupancy_grid_base.cpp  occupancy_grid_set.cpp  pcl_utils.cpp  utils.cpp  utils_xmlrpc.cpp  utils_yaml.cpp
kinova/itia_utilities/itia_butils/: CMakeLists.txt
kinova/itia_utilities/itia_gutils/: CMakeLists.txt
kinova/itia_utilities/itia_mutils/: CMakeLists.txt
kinova/itia_utilities/itia_rutils/: CMakeLists.txt
kinova/itia_utilities/itia_tfutils/: CMakeLists.txt  package.xml
kinova/k2_client/launch/: k2_client.launch
kinova/k2_client_vis/: CMakeLists.txt  README.md  package.xml  setup.py
kinova/k2_client_vis/launch/: k2_client_vis.launch
kinova/k2_client_vis/src/: updatetf.py
kinova/k2_client_vis/src/k2_server_vis/: __init__.py
kinova/pocketsphinx/: pocketsphinx.kdev4
virtual_force_sensor/: CMakeLists.txt
virtual_force_sensor/rosdyn/: rosdyn.kdev4
virtual_force_sensor/rosdyn_ekf/rosdyn_ekf/: CMakeLists.txt  package.xml
virtual_force_sensor/rosdyn_ekf/rosdyn_ekf/config/: test.yaml
virtual_force_sensor/rosdyn_ekf/rosdyn_ekf/docs/: eq.aux  eq.tex
virtual_force_sensor/rosdyn_ekf/rosdyn_ekf/include/rosdyn_ekf/: rosdyn_ekf.h
virtual_force_sensor/rosdyn_ekf/rosdyn_ekf/launch/: test.launch
virtual_force_sensor/rosdyn_ekf/rosdyn_ekf/src/: rosdyn_ekf_node.cpp
virtual_force_sensor/rosdyn_ekf/rosdyn_ekf/src/rosdyn_ekf/: rosdyn_ekf.cpp
virtual_force_sensor/terrin_pack/: terrin_pack.kdev4
virtual_force_sensor/terrin_pack/tsupport/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  tsupport.kdev4
virtual_force_sensor/terrin_pack/tsupport/include/: basic.h~  itia_moveit_utils.h~  support.h~  tbasic.h~  tmoveit_utils.h~
virtual_force_sensor/terrin_pack/tsupport/include/tsupport/: basic.h  basic.h~  moveit_utils.h  tbasic.h~  tmoveit_utils.h~
virtual_force_sensor/terrin_pack/tsupport/launch/: topic_average.launch
virtual_force_sensor/terrin_pack/tsupport/src/: topic_average.cpp  tsupport.cpp
virtual_force_sensor/terrin_pack/user_pack/: CMakeLists.txt  package.xml  user_pack.kdev4
virtual_force_sensor/terrin_pack/user_pack/config/: cartesian_joint_movement.yaml  kalman_filter_joint_state.yaml  test.yaml
virtual_force_sensor/terrin_pack/user_pack/launch/: cartesian_joint_movement.launch  joint_state_filtering.launch  kalman_filter_example.launch  kalman_filter_joint_state.launch  moveit_check.launch  moveit_check.launch~  sinusoidal_action.launch  test.launch~  trial.launch  trial.launch~  virtual_force_sensor_estimation.launch  wrench_filtering.launch  write_rostopic.launch
virtual_force_sensor/terrin_pack/user_pack/src/: cartesian_joint_movement.cpp  fake_joint_state_pub.cpp  ident_trj_filtering.cpp  joint_state_filtering.cpp  joint_state_sub.cpp  kalman_filter_example.cpp  kalman_filter_joint_state.cpp  low_pass_filter_example.cpp  moveit_check.cpp  moveit_check.cpp~  planning_scene.cpp  sinusoidal_action.cpp  trial.cpp  trial.cpp~  virtual_force_sensor_estimation.cpp  wrench_filtering.cpp  write_rostopic.cpp  zero_phase_filter.cpp
virtual_force_sensor/universal_robot/: universal_robot.kdev4
(+93 files in other folders)
