<?xml version="1.0"?>
<package>
    <name>itia_hindsight_assistance_policy</name>
    <version>0.1.0</version>
    <description>
        hindsight_assistance_policy
    </description>
    <license>BSD</license>
    
    <author email="aaa@cs.cmu.edu">Anurag Jakhotia</author>
    <!--author email="pkv@cs.cmu.edu">Pras Velagapudi</author-->
    <maintainer email="pkv@cs.cmu.edu">Pras Velagapudi</maintainer>
    <license>BSD</license>
    <!--url type="website">http://github.com/personalrobotics/hindsight_assistance_policy</url-->

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>itia_human_prediction</build_depend>
        
    <run_depend>message_runtime</run_depend>              
    <run_depend>roscpp</run_depend>
    <run_depend>itia_human_prediction</run_depend>
</package>


