<?xml version="1.0"?>
<package>
    <name>itia_human_prediction</name>
    <version>0.1.0</version>
    <description>
        Python library forhuman robot collaborative experiments
    </description>
    <license>BSD</license>
    
    <author email="stefania.pellegrinelli@itia.cnr.it">Stefania Pellegrinelli</author>
    <maintainer email="stefania.pellegrinelli@itia.cnr.it">Stefania Pellegrinelli</maintainer>
    
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>python</build_depend>
    <build_depend>roscpp</build_depend>    
    <build_depend>message_generation</build_depend>
    
    <run_depend>message_runtime</run_depend>
    <run_depend>python</run_depend>
    <run_depend>python-catkin-pkg</run_depend>
    <run_depend>python-enum</run_depend>
    <run_depend>python-numpy</run_depend>
    <run_depend>k2_client</run_depend>
    <!--run_depend>hindsight_assistance_policy</run_depend-->
</package>
