<?xml version="1.0"?>
<package>
  <name>k2_client_vis</name>
  <version>0.0.0</version>
  <description>
      The k2_server_vis package. It takes the output of k2_server and 
      visualizes it in rviz
  </description>
  <license>BSD</license>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <author email="stefania.pellegrinelli@itia.cnr.it">spelle</author>
  <maintainer email="stefania.pellegrinelli@itia.cnr.it">spelle</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python</build_depend>
  <build_depend>k2_client</build_depend>
  
  <run_depend>k2_client</run_depend>
  <run_depend>rviz</run_depend>
    
</package>